docs ui sidebar and recommended linkss

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -75,7 +75,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 			)
 		}
 		<GithubStars client:visible />
-		<ThemeToggle client:visible />
+		<ThemeToggle client:only='react' />
 	</nav>
 </header>
 <DonationModal client:only='react' />
