--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -15,9 +15,6 @@ const title = frontmatter.title
 ---
 
 <article id='article' class='content'>
-	<div class="color-desc" aria-hidden="true">
-		<span class="visited">Visited article</span><span class="not-visited">Not visited</span>
-	</div>
 	<section class='main-section'>
 		<h1 class='content-title' id='overview'>{title}</h1>
 		<nav class='block sm:hidden'>
@@ -52,7 +49,8 @@ const title = frontmatter.title
 		background-color: var(--theme-text-accent);
 	}
 
-	.visited,.not-visited {
+	.visited,
+	.not-visited {
 		padding: 4px 16px;
 		font-weight: bold;
 		color: var(--theme-bg);
