--- a/src/components/RightSidebar/MoreMenu.astro
+++ b/src/components/RightSidebar/MoreMenu.astro
@@ -11,11 +11,15 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 ---
 
 {showMoreSection && <h2 class='heading'>More</h2>}
-<ul>
+<ul class='ring-1 m-1 rounded-md p-1 ring-basetext/10 pt-0'>
 	{
 		editHref && (
-			<li class={`heading-link`}>
-				<a class='flex gap-4' href={editHref} target='_blank'>
+			<li class='border-b-basetext/10 border-b-2'>
+				<a
+					class='text-theme-base text-center py-2 px-4 transition duration-200 ease-in-out w-full flex items-center gap-2'
+					href={editHref}
+					target='_blank'
+				>
 					<svg
 						aria-hidden='true'
 						focusable='false'
@@ -33,7 +37,7 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 							d='M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z'
 						/>
 					</svg>
-					<span>View this file in repo</span>
+					<span>Edit this article</span>
 				</a>
 			</li>
 		)
@@ -41,9 +45,9 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 	{
 		CONFIG.COMMUNITY_INVITE_URL && (
 			<>
-				<li class='flex'>
+				<li class='border-b-basetext/10 border-b-2'>
 					<a
-						class='flex gap-4'
+						class='text-theme-base text-center py-2 px-4 transition duration-200 ease-in-out w-full flex items-center gap-2'
 						href={CONFIG.COMMUNITY_INVITE_URL}
 						target='_blank'
 					>
@@ -67,7 +71,7 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 						<span>Contribute to the project</span>
 					</a>
 				</li>
-				<li class={`heading-link git-btn`}>
+				<li>
 					<GitHubStarLink />
 				</li>
 			</>
