--- a/src/components/RecommendedSections/RecommendedSections.astro
+++ b/src/components/RecommendedSections/RecommendedSections.astro
@@ -38,7 +38,7 @@ const sidebarLinks = getThreeRandomLinks()
 	}
 </style>
 
-<div class='mt-2'>
+<div class='m-auto mt-2'>
 	<h2>Links you might like</h2>
 	<ul class='flex items-center gap-4 flex-wrap mt-2'>
 		{
