--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -45,8 +45,6 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 		</title>
 		<style lang='scss'>
 			body {
-				width: 100%;
-				display: grid;
 				grid-template-rows: var(--theme-navbar-height) 1fr;
 				--gutter: 0.5rem;
 				--doc-padding: 2rem;
@@ -69,7 +67,6 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			}
 
 			#grid-main {
-				padding: var(--doc-padding) var(--gutter);
 				grid-column: 2;
 				display: flex;
 				flex-direction: column;
@@ -206,6 +203,10 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 					outline: none;
 				}
 			}
+
+			article {
+				margin: auto;
+			}
 		</style>
 	</head>
 
@@ -219,7 +220,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			>
 				<LeftSidebar currentPage={currentPage} />
 			</aside>
-			<div class='max-w-6xl mx-auto w-fit' id='grid-main'>
+			<div class='mx-auto w-full flex justify-center' id='grid-main'>
 				<PageContent
 					frontmatter={frontmatter}
 					headings={headings}
