--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -18,7 +18,7 @@ const title = frontmatter.title
 	<section class='main-section'>
 		<h1 class='content-title' id='overview'>{title}</h1>
 		<nav class='block sm:hidden'>
-			<TableOfContents client:media='(max-width: 50em)' headings={headings} />
+			<TableOfContents client:only='preact' headings={headings} />
 		</nav>
 		<slot />
 	</section>
