Add client side routing

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions'
 import '../styles/index.css'
 import '../styles/themes/tailwind.css'
 
@@ -34,6 +35,7 @@ const poppinsVariants = [
 <link rel='icon' type='image/svg+xml' href='/favicon.ico' />
 
 <link rel='sitemap' href='/sitemap.xml' />
+<ViewTransitions />
 
 <!-- Fonts -->
 
