Fix client side router not working on firefox

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -35,7 +35,7 @@ const poppinsVariants = [
 <link rel='icon' type='image/svg+xml' href='/favicon.ico' />
 
 <link rel='sitemap' href='/sitemap.xml' />
-<ViewTransitions />
+<ViewTransitions fallback='swap' />
 
 <!-- Fonts -->
 
