--- a/src/styles/docs.scss
+++ b/src/styles/docs.scss
@@ -29,6 +29,10 @@ article {
 	}
 }
 
+article ul {
+	list-style: disc;
+}
+
 article :is(h2, h3):not(:first-child) {
 	margin-top: 3rem !important;
 }
