--- a/src/components/LandingPage/Comparison/Comparison.astro
+++ b/src/components/LandingPage/Comparison/Comparison.astro
@@ -1,6 +1,6 @@
 ---
 import ComparisonCard, {
-	Props as ComparisonCardProps,
+	type Props as ComparisonCardProps,
 } from './ComparisonCard.astro'
 
 const comparisonData: ComparisonCardProps[] = [
