--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,8 @@
 ---
 import HeadCommon from '../components/HeadCommon.astro'
 import Header from '../components/Header/Header.astro'
+import DocsButton from '../components/Redesign/LandingElements/DocsButton.astro'
+import Footer from '../components/Redesign/LandingSections/Footer/Footer.astro'
 import type { Frontmatter } from '../config'
 
 const frontmatter: Frontmatter = {
@@ -12,44 +14,7 @@ const frontmatter: Frontmatter = {
 const currentPage = Astro.url.pathname
 ---
 
-<style lang='scss'>
-	.wrapper {
-		height: 100vh;
-		height: 100dvh;
-		display: flex;
-		flex-direction: column;
-	}
 
-	.inner-wrapper {
-		flex: 1;
-		* {
-			font-family: Nunito;
-		}
-		h1 {
-			margin: 0;
-		}
-		margin: 0 auto;
-		max-width: 80%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		@media screen and (max-width: 400px) {
-			max-width: 95%;
-		}
-	}
-
-	.link {
-		background-color: var(--bewebdev-pink-saturated);
-		padding: 0.7rem 1.5rem;
-		text-decoration: none;
-		margin-top: 2rem;
-		font-size: 1.4rem;
-		font-weight: bold;
-		box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-		border-radius: 1rem;
-	}
-</style>
 
 <head>
 	<HeadCommon />
@@ -57,11 +22,16 @@ const currentPage = Astro.url.pathname
 		{frontmatter.title}
 	</title>
 </head>
-<div class='wrapper'>
+<div class='bg-theme-base flex min-h-screen items-center justify-center flex-col overflow-hidden'>
 	<Header currentPage={currentPage} />
-	<div class='inner-wrapper'>
-		<h1>404</h1>
-		<p>This page doesn't exist</p>
-		<a href='/' class='link'>Go back to main page</a>
+	<div class='text-center flex flex-col gap-4 relative justify-center items-center mb-32'>
+		<p class="text-lg font-bold mt-8">This page doesn't exist</p>
+		<div class="absolute w-40 h-40 bg-theme-accent-primary/50 blur-3xl left-1/2 top-0 -translate-x-1/2 -translate-y-1/2"></div>
+		<div class="absolute w-40 h-40 bg-theme-accent-secondary/50 blur-3xl left-0 top-full -translate-x-1/2 -translate-y-1/2"></div>
+		<div aria-hidden="true" class="absolute text-[180px] 3xl:text-[300px] font-extrabold left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none select-none opacity-10">404</div>
 	</div>
+	<DocsButton href="/">
+		Go back to main page
+	</DocsButton>
 </div>
+<Footer/>
