--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -1,5 +1,6 @@
 ---
 import { SIDEBAR } from '../../config'
+import SidebarItem from './SidebarItem.astro'
 
 type Props = {
 	currentPage: string
@@ -24,15 +25,9 @@ const currentPageMatch = currentPage.endsWith('/')
 								const isCurrentPage = currentPageMatch === child.link
 
 								return (
-									<li class=`mt-1 group border-b-2 border-b-basetext/10 last:border-b-0 pb-1`>
-										<a
-											class=`rounded-md group-hover:border-b-transparent block px-4 py-4 desktop-ui:py-1 text-sm ${isCurrentPage ? 'bg-basetext/90 font-extrabold text-theme-inverted' : 'hover:bg-basetext/10'}`
-											href={url}
-											aria-current={isCurrentPage ? 'page' : false}
-										>
-											{child.text}
-										</a>
-									</li>
+									<SidebarItem url={url} isCurrentPage={isCurrentPage ? 'page' : false}>
+										{child.text}
+										</SidebarItem>
 								)
 							})}
 						</ul>
