--- a/src/components/Redesign/LandingPage.astro
+++ b/src/components/Redesign/LandingPage.astro
@@ -7,6 +7,7 @@ import Advantages from './LandingSections/Advantages.astro'
 import FAQ from './LandingSections/FAQ.astro'
 import Footer from './LandingSections/Footer/Footer.astro'
 import Hero from './LandingSections/Hero.astro'
+import ImageAttribution from './LandingSections/Footer/ImageAttribution.astro'
 ---
 
 <body class='bg-theme-base overflow-x-clip font-sans'>
@@ -17,5 +18,7 @@ import Hero from './LandingSections/Hero.astro'
 	</LandingSection>
 	<Advantages />
 	<FAQ />
-	<Footer />
+	<Footer>
+		<ImageAttribution/>
+	</Footer>
 </body>
