--- a/src/components/Redesign/LandingSections/AboutUs.astro
+++ b/src/components/Redesign/LandingSections/AboutUs.astro
@@ -11,7 +11,7 @@ import LandingSection from '../LandingSection.astro'
 		>
 			<img
 				class='max-h-[500px]'
-				src='/images/promo/Programming-amico.webp'
+				src='/images/promo/about-us.svg'
 				alt=''
 			/>
 		</div>
