--- a/src/components/Redesign/LandingSections/Footer/Socials.astro
+++ b/src/components/Redesign/LandingSections/Footer/Socials.astro
@@ -11,7 +11,7 @@ import SocialLink from './SocialLink.astro'
 <div>
 	<h2 class='mb-5'>Social Handles</h2>
 	<ul class='flex gap-4'>
-		<SocialLink href='https://github.com/goodideagiver'>
+		<SocialLink href='https://discord.gg/kGsCDes7VU'>
 			<DiscordLogoIcon />
 		</SocialLink>
 		<SocialLink href='https://www.youtube.com/@bewebdev?sub_confirmation=1'>
