--- a/src/components/Redesign/LandingSections/Footer/Footer.astro
+++ b/src/components/Redesign/LandingSections/Footer/Footer.astro
@@ -14,6 +14,7 @@ const { isDocs } = Astro.props as { isDocs?: boolean }
 		<footer>
 			<TopFooterSection />
 			<BottomFooterSection />
+			<slot/>
 		</footer>
 	</LandingSection>
 </div>
