Change logo component name to fit usage

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,7 +1,7 @@
 ---
 import * as CONFIG from '../../config'
 import ThemeToggle from '../RightSidebar/ThemeToggleButton'
-import AstroLogo from './AstroLogo.astro'
+import AstroLogo from './Logo.astro'
 import Search from './Search'
 import SidebarToggle from './SidebarToggle'
 import SkipToContent from './SkipToContent.astro'
