--- a/src/styles/docs.scss
+++ b/src/styles/docs.scss
@@ -25,64 +25,84 @@ article {
 	h4,
 	h5,
 	h6 {
-		font-weight: bold !important;
+		font-weight: bold;
 	}
 }
 
 article :is(h2, h3):not(:first-child) {
-	margin-top: 3rem !important;
+	margin-top: 3rem;
 }
 
 article {
 	:is(h4, h5, h6):not(:first-child) {
-		margin-top: 2rem !important;
+		margin-top: 2rem;
 	}
 }
 
 article {
 	h1 {
-		font-size: 3.25rem !important;
+		font-size: 3.25rem;
 		font-weight: 800;
 	}
 
 	h2 {
-		font-size: 2.5rem !important;
+		font-size: 2.5rem;
 	}
 
 	h3 {
-		font-size: 1.75rem !important;
+		font-size: 1.75rem;
 	}
 
 	h4 {
-		font-size: 1.3rem !important;
+		font-size: 1.3rem;
 	}
 
 	h5 {
-		font-size: 1rem !important;
+		font-size: 1rem;
+	}
+}
+
+summary {
+	padding: 1rem;
+	border-radius: 0.375rem;
+	border: 1px solid rgba(var(--color-text-base), 10%);
+}
+
+details[open] {
+	border: 1px solid rgba(var(--color-text-base), 10%);
+	padding: 1rem;
+	border-radius: 0.375rem;
+	summary {
+		border: 0;
+		border-bottom: 1px solid rgba(var(--color-text-base), 10%);
+		padding: 0;
+		border-radius: 0;
+		padding-bottom: 1rem;
+		margin-bottom: 1rem;
 	}
 }
 
 article {
 	@media (max-width: 1440px) {
 		h1 {
-			font-size: 2.2rem !important;
-			font-weight: 800 !important;
+			font-size: 2.2rem;
+			font-weight: 800;
 		}
 
 		h2 {
-			font-size: 1.8rem !important;
+			font-size: 1.8rem;
 		}
 
 		h3 {
-			font-size: 1.4rem !important;
+			font-size: 1.4rem;
 		}
 
 		h4 {
-			font-size: 1.2rem !important;
+			font-size: 1.2rem;
 		}
 
 		h5 {
-			font-size: 1.1rem !important;
+			font-size: 1.1rem;
 		}
 	}
 }
@@ -90,47 +110,47 @@ article {
 article {
 	@media (max-width: 800px) {
 		h1 {
-			font-size: 2.6rem !important;
-			font-weight: 800 !important;
+			font-size: 2.6rem;
+			font-weight: 800;
 		}
 
 		h2 {
-			font-size: 1.8rem !important;
+			font-size: 1.8rem;
 		}
 
 		h3 {
-			font-size: 1.4rem !important;
+			font-size: 1.4rem;
 		}
 
 		h4 {
-			font-size: 1.2rem !important;
+			font-size: 1.2rem;
 		}
 
 		h5 {
-			font-size: 1rem !important;
+			font-size: 1rem;
 		}
 	}
 
 	@media (max-width: 450px) {
 		h1 {
-			font-size: 1.8rem !important;
-			font-weight: 800 !important;
+			font-size: 1.8rem;
+			font-weight: 800;
 		}
 
 		h2 {
-			font-size: 1.5rem !important;
+			font-size: 1.5rem;
 		}
 
 		h3 {
-			font-size: 1.3rem !important;
+			font-size: 1.3rem;
 		}
 
 		h4 {
-			font-size: 1.1rem !important;
+			font-size: 1.1rem;
 		}
 
 		h5 {
-			font-size: 1rem !important;
+			font-size: 1rem;
 		}
 	}
 }
@@ -138,11 +158,6 @@ article {
 p,
 .content ul {
 	color: var(--theme-text-light);
-}
-
-small,
-.text_small {
-	font-size: 0.833rem !important;
 }
 
 article a {
@@ -157,11 +172,11 @@ article a {
 }
 
 article a:hover {
-	color: rgb(var(--color-text-base)) !important;
+	color: rgb(var(--color-text-base));
 }
 
 article > section :is(ul, ol) > * + * {
-	margin-top: 0.75rem !important;
+	margin-top: 0.75rem;
 }
 
 article > section nav :is(ul, ol) > * + * {
@@ -236,7 +251,7 @@ code {
 	font-family: var(--font-mono);
 	font-size: 0.85em;
 	color: inherit;
-	background-color: var(--theme-code-inline-bg);
+	background-color: rgb(var(--color-bg-elevated));
 	padding: var(--padding-block) var(--padding-inline);
 	margin: calc(var(--padding-block) * -1) -0.125em;
 	border-radius: var(--border-radius);
