Fix landing page attribution links description and urls

--- a/src/components/Redesign/LandingSections/Footer/ImageAttribution.astro
+++ b/src/components/Redesign/LandingSections/Footer/ImageAttribution.astro
@@ -1,14 +1,14 @@
 <h2 class='sr-only'>Image attribution links</h2>
 <ul class="mt-8 text-theme-muted flex gap-4 flex-wrap">
 	<li>
-		<a target='_blank' class="hover:text-theme-base" href="https://www.freepik.com/free-vector/programming-languages-learning-software-coding-courses-website-development-class-script-writing-it-programmers-cartoon-characters_12145578.htm#page=4&query=programming&position=8&from_view=search&track=sph">Image by vectorjuice</a> on Freepik
+		<a target='_blank' class="hover:text-theme-base" href="https://www.freepik.com/author/vectorjuice">Hero image by vectorjuice on Freepik</a>
 	</li>
 	<li>
 		<a
 			class="hover:text-theme-base"
 			title='storyset.com'
 			target='_blank'
-			href='https://storyset.com/online'>Online illustrations by Storyset</a
+			href='https://storyset.com/online'>About us illustration by Storyset</a
 		>
 	</li>
 </ul>
