--- a/src/components/Header/Logo.astro
+++ b/src/components/Header/Logo.astro
@@ -1,8 +1,11 @@
 ---
 const { size = 50 } = Astro.props as { size?: number }
 ---
+
 <img
-	style=`width: ${size}px; min-width: ${size}px;`
-	alt='bewebdev logo - computer backlit with pink color'
-	src='/images/logo.svg'
+  style=`width: ${size}px; min-width: ${size}px;`
+  alt='bewebdev logo - computer backlit with pink color'
+  src='/images/logo.svg'
+  width={size}
+  height={size}
 />
