--- a/src/styles/docs.scss
+++ b/src/styles/docs.scss
@@ -1,8 +1,8 @@
-.content > section > * + * {
+.content>section>*+* {
 	margin-top: 1.25rem;
 }
 
-.content > section > :first-child {
+.content>section> :first-child {
 	margin-top: 0;
 }
 
@@ -12,6 +12,7 @@ body {
 }
 
 article {
+
 	h1,
 	h2 {
 		max-width: 40ch;
@@ -19,6 +20,7 @@ article {
 }
 
 article {
+
 	h1,
 	h2,
 	h3,
@@ -72,6 +74,7 @@ details[open] {
 	border: 1px solid rgba(var(--color-text-base), 10%);
 	padding: 1rem;
 	border-radius: 0.375rem;
+
 	summary {
 		border: 0;
 		border-bottom: 1px solid rgba(var(--color-text-base), 10%);
@@ -162,63 +165,63 @@ p,
 
 article a {
 	color: rgb(var(--color-link));
+
 	&:visited {
 		color: rgb(var(--color-text-muted));
 	}
+
 	font-weight: 400;
 	text-underline-offset: 0.08em;
 	align-items: center;
 	gap: 0.5rem;
 }
 
-article a:hover {
-	color: rgb(var(--color-text-base));
-}
+article {
+	a:hover {
+		color: rgb(var(--color-text-base));
+	}
 
-article > section :is(ul, ol) > * + * {
+	&>section :is(ul, ol)>*+* {
 	margin-top: 0.75rem;
+	}
 }
 
-article > section nav :is(ul, ol) > * + * {
-	margin-top: inherit;
-}
-
-article > section li > :is(p, pre, blockquote):not(:first-child) {
+article>section li> :is(p, pre, blockquote):not(:first-child) {
 	margin-top: 1rem;
 }
 
-article > section :is(ul, ol) {
+article>section :is(ul, ol) {
 	padding-left: 1em;
 }
 
-article > section nav :is(ul, ol) {
+article>section nav :is(ul, ol) {
 	padding-left: inherit;
 }
 
-article > section nav {
+article>section nav {
 	margin-top: 1rem;
 	margin-bottom: 2rem;
 }
 
-article > section ::marker {
+article>section ::marker {
 	font-weight: bold;
 	color: var(--theme-text-light);
 }
 
-article > section iframe {
+article>section iframe {
 	width: 100%;
 	height: auto;
 	aspect-ratio: 16 / 9;
 }
 
-a > code {
+a>code {
 	position: relative;
 	color: var(--theme-text-accent);
 	background: transparent;
 	text-underline-offset: var(--padding-block);
 }
 
-a > code::before {
+a>code::before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -258,11 +261,11 @@ code {
 	word-break: break-word;
 }
 
-pre.astro-code > code {
+pre.astro-code>code {
 	all: unset;
 }
 
-pre > code {
+pre>code {
 	font-size: 1em;
 }
 
@@ -355,6 +358,17 @@ article {
 		border-radius: 99em;
 		color: rgb(var(--color-text-base));
 		background-color: rgb(var(--color-bg-base));
+	}
+}
+
+article > section > ul {
+	list-style: decimal;
+	li {
+		ul {
+			margin-top: .3rem;
+			list-style: square;
+			margin-bottom: 1.3rem;
+		}
 	}
 }
 
