--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -21,11 +21,12 @@ type Props = {
 	headings: MarkdownHeading[]
 	file: string;
 }
+const lastURLElementRegex = /\/([^/]+)\/$/
 
 const { frontmatter, headings } = Astro.props as Props
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 const currentPage = Astro.url.pathname + '/'
-const currentFolder = currentPage.replace(/\/([^/]+)\/$/,'')
+const currentFolder = currentPage.replace(lastURLElementRegex,'')
 const fileNameAndExtension = Astro.props.file.split('/').at(-1).replace(`"`,'')
 const currentFile = `src/pages${currentFolder}/${fileNameAndExtension}`
 const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
