Fix updated date

--- a/src/components/RightSidebar/RightSidebar.astro
+++ b/src/components/RightSidebar/RightSidebar.astro
@@ -12,7 +12,7 @@ const { headings, githubEditUrl } = Astro.props as Props
 ---
 
 <nav class='w-full sticky top-0' aria-labelledby='grid-right'>
-	<div class='h-full overflow-auto'>
+	<div class='h-full overflow-auto pb-32'>
 		<TableOfContents client:only='preact' headings={headings} />
 		<MoreMenu editHref={githubEditUrl} />
 	</div>
