--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,20 +1,20 @@
 ---
 import type { MarkdownHeading } from 'astro'
 import HeadCommon from '../components/HeadCommon.astro'
-import Header from '../components/Header/Header.astro'
 import HeadSEO from '../components/HeadSEO.astro'
+import Header from '../components/Header/Header.astro'
 import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro'
 import PageContent from '../components/PageContent/PageContent.astro'
 import RecommendedSections from '../components/RecommendedSections/RecommendedSections.astro'
 import RightSidebar from '../components/RightSidebar/RightSidebar.astro'
 import CopyCodeToClipboard from '../components/utility/CopyCodeToClipboard/CopyCodeToClipboard.astro'
 import HeadingLinksCopyToClipboard from '../components/utility/HeadingLinksCopyToClipboard/HeadingLinksCopyToClipboard.astro'
-import ArticleUpdateDate from '../components/ArticleUpdateDate/ArticleUpdateDate'
 
 import '../styles/docs.scss'
 
-import * as CONFIG from '../config'
 import Footer from '../components/Redesign/LandingSections/Footer/Footer.astro'
+import * as CONFIG from '../config'
+import { timeSince } from '../utils/timeSince'
 
 type Props = {
 	frontmatter: CONFIG.Frontmatter
@@ -29,7 +29,10 @@ const currentPage = Astro.url.pathname + '/'
 const currentFolder = currentPage.replace(lastURLElementRegex,'')
 const fileNameAndExtension = Astro.props.file.split('/').at(-1).replace(`"`,'')
 const currentFile = `src/pages${currentFolder}/${fileNameAndExtension}`
-const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
+const filePath = Astro.props.frontmatter.filePath
+const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${filePath}`
+const lastModified = Astro.props.frontmatter.lastModified
+const updatedSince = timeSince(new Date(lastModified))
 ---
 
 <html
@@ -230,7 +233,8 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 					headings={headings}
 					githubEditUrl={githubEditUrl}
 				>
-					<ArticleUpdateDate path={currentFile} client:only='react' />
+					<p>{filePath}</p>
+					<p class="text-theme-muted">Updated {updatedSince} ago</p>
 					<slot />
 				</PageContent>
 				<RecommendedSections />
