--- a/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
+++ b/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
@@ -1,5 +1,5 @@
 ---
-import DocsButton from '../../Redesign/LandingElements/DocsButton.astro'
+import Button from '../../Redesign/LandingElements/Button.astro'
 const YOUTUBE_CHANNEL_ID = 'UUww1wSWy6LvZjyEEHr7ypLA'
 
 const LATEST_VIDEO_COUNT = 3
@@ -70,9 +70,9 @@ const getLatestVideoLink = (index: number) => {
 			and new ways to write code for both parties - code reviewer and code
 			writer
 		</p>
-		<DocsButton href={CHANNEL_SUBSCRIBE_LINK}>
+		<Button href={CHANNEL_SUBSCRIBE_LINK}>
 			Visit our YouTube channel
-		</DocsButton>
+		</Button>
 	</div>
 </div>
 <div class='flex gap-4 lg:gap-8 xl:gap-14 flex-wrap w-full'>
