--- a/src/components/Redesign/LandingSections/Footer/BottomFooterSection.astro
+++ b/src/components/Redesign/LandingSections/Footer/BottomFooterSection.astro
@@ -43,6 +43,10 @@ const links: LinkGroupProps[] = [
 				title: 'HTML',
 				url: '/technologies/html',
 			},
+			{
+				title: 'Quiz',
+				url: '/quiz',
+			},
 		],
 	},
 	{
