--- a/src/components/Redesign/LandingSections/Hero.astro
+++ b/src/components/Redesign/LandingSections/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import DocsButton from '../LandingElements/DocsButton.astro'
+import Button from '../LandingElements/Button.astro'
 import LandingSection from '../LandingSection.astro'
 ---
 
@@ -21,7 +21,7 @@ import LandingSection from '../LandingSection.astro'
     <p class='mb-8'>
       Learning resources, carefully selected, verified, up to date
     </p>
-    <DocsButton href='/introduction'>Start Learning</DocsButton>
+    <Button href='/introduction'>Start Learning</Button>
   </div>
   <div class='hidden md:flex grow-1 items-center justify-center w-full'>
     <img
