refactor: design and modals

--- a/src/components/Redesign/LandingSections/Footer/Footer.astro
+++ b/src/components/Redesign/LandingSections/Footer/Footer.astro
@@ -6,7 +6,7 @@ import BottomFooterSection from './BottomFooterSection.astro'
 const { isDocs } = Astro.props as { isDocs?: boolean }
 ---
 
-<div class='bg-theme-base relative z-10 min-h-[300px] font-serious'>
+<div class='bg-theme-base relative z-[51] min-h-[300px] font-serious'>
 	<LandingSection
 		maxWidth={isDocs ? 'max-w-docs' : 'max-w-7xl'}
 		className='py-8'
