--- a/src/components/Quiz/QuizPage.astro
+++ b/src/components/Quiz/QuizPage.astro
@@ -1,9 +1,9 @@
 ---
-import Quiz from './Quiz'
+import Quiz from './Quiz';
 ---
 
 <body class='bg-theme-base overflow-x-clip font-sans'>
-    <div class="p-20">
-        <Quiz client:load />
-    </div>
+  <div class='pt-12 sm:p-20'>
+    <Quiz client:load />
+  </div>
 </body>
